--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <h1>Welcome to the index page!!!</h1>
+    <h3>Visit the following urls to access different pages:</h3>
+    <ul>
+      <li>/about - for the about page</li>
+      <li>/contact-me - for the contact page</li>
+      <li>any other url ( /1234 ) will lead u to the 404 error page</li>
+    </ul>
     <h3>
       That's it! this is just a site to understand how to host a node server
       with http.
